--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -17,9 +17,9 @@
                 class="text-left"
                 [displayBottomPanel]="false"
                 [disabled]="disabled"
-                label="{{'filter' | phrase}}"
+                label="{{filterLabel | phrase}}"
                 trailingGlyph="search"
-                [(ngModel)]="searchPhrase"
+                [(ngModel)]="searchPhrase" 
                 (keyup)="onSearchKeyUp($event)">
         </material-input>
     </div>
