--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -18,7 +18,7 @@
     <material-dropdown-select
             [class.full-width]="fullWidth"
             [disabled]="disabled || options == null || selectionModel == null"
-            [buttonText]="selectedId == null ? nullSelectionButtonText : selectedModel?.toString()"
+            [buttonText]="selectionModel.isEmpty() ? nullSelectionButtonText : selectedModel?.toString()"
             [popupMatchInputWidth]="false"
             [options]="options"
             [componentRenderer]="componentRenderer"
