--- a/lib/src/components/fo_date_input_component/fo_date_input_component.scss
+++ b/lib/src/components/fo_date_input_component/fo_date_input_component.scss
@@ -17,6 +17,7 @@
             outline: none;
             border: 0;
             border-bottom: 1px solid #ddd;
+            width: 100%;
         }
     }
 }
