fo-select now has optional ActionButtonText

--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -36,7 +36,8 @@
             *ngIf="showActionButton"
             raised
             (trigger)="onActionButtonTriggerController.add(selectedModel)">
-        <material-icon [icon]="actionButtonIcon" size="x-large"></material-icon>
+        <span *ngIf="actionButtonText != null">{{actionButtonText | phrase}}</span>
+        <material-icon *ngIf="actionButtonIcon != null" [icon]="actionButtonIcon" size="x-large"></material-icon>
     </material-button>
 </div>
 
