--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -24,11 +24,11 @@
         display: flex;
         material-dropdown-select
         {
-            flex: 0.8;
+            flex: auto;
         }
         material-button
         {
-            flex: 0.2;
+            flex: auto;
         }
         material-dropdown-select.full-width
         {
