--- a/lib/src/components/fo_date_input_component/fo_date_input_component.html
+++ b/lib/src/components/fo_date_input_component/fo_date_input_component.html
@@ -1,4 +1,4 @@
 <label>
-    <div>{{label | phrase}}*</div>
+    <div>{{label | phrase}}</div>
     <input type="date" [disabled]="disabled" (change)="onValueChange(input.valueAsDate)" id="input" #input />
 </label>
