DataTableComponent now has @Input('internalFilters') which specifies whether or not the component should manage filter and sort functionality on its own

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -104,8 +104,18 @@
                 raised
                 [disabled]="disabled || data.isEmpty"
                 [materialTooltip]="'download_csv' | phrase"
-                (click)="onDownloadDataCSV()">
+                (trigger)="onDownloadDataCSV()">
             <material-icon class="color-black" size="medium" icon="file_download"></material-icon>
+        </material-button>
+        <material-button
+                *ngIf="showAddButton"
+                class="margin-bottom-small"
+                clear-size
+                raised
+                [disabled]="disabled"
+                [materialTooltip]="'add' | phrase"
+                (trigger)="onAddController.add('')">
+            <material-icon class="color-black" size="medium" icon="add"></material-icon>
         </material-button>
     </div>
     <div class="s9 m10 col text-right">
