DataTableComponent: sort column now underlined fix #1

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -58,7 +58,7 @@ table.output
         text-overflow: ellipsis;
         font-size: 0.8rem;
       }
-      td.underline
+      td.underline:not(material-icon)
       {
         text-decoration: underline;
       }
