--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -37,9 +37,8 @@
                     [class.hide-for-small]="smallHiddenCol.contains(cell)"
                     [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                     [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    [class.underline]="sortColumn == cell"
                     (click)="onSort(cell)">
-                    {{cell | phrase}}
+                    <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
                     <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
                     <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
                 </td>
@@ -47,9 +46,8 @@
                     [class.hide-for-small]="smallHiddenCol.contains(cell)"
                     [class.hide-for-medium]="mediumHiddenCol.contains(cell)"
                     [class.hide-for-large]="largeHiddenCol.contains(cell)"
-                    [class.underline]="sortColumn == cell"
                     (click)="onSort(cell)">
-                    {{cell | phrase}}
+                    <span [class.underline]="sortColumn == cell">{{cell | phrase}}</span>
                     <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'DESC'" icon="keyboard_arrow_up"></material-icon>
                     <material-icon size="medium" [class.hidden]="sortColumn != cell || sortOrder == 'ASC'" icon="keyboard_arrow_down"></material-icon>
                 </td>
