--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -58,18 +58,12 @@ table.output
 
         span
         {
-            font-weight: bold;
+            //font-weight: bold;
             font-size: 0.8rem;
-            text-decoration: underline;
-            text-decoration-color: transparent;
-            -webkit-text-decoration-color: transparent;
-            -moz-text-decoration-color: transparent;
         }
         span.underline
         {
-            text-decoration-color: #333;
-            -webkit-text-decoration-color: #333;
-            -moz-text-decoration-color: #333;
+            text-decoration: underline;
         }
       }
 
