--- a/lib/src/components/fo_data_table_component/fo_data_table_component.scss
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.scss
@@ -58,8 +58,8 @@ table.output
 
         span
         {
-            //font-weight: bold;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
+            font-stretch: ultra-condensed
         }
         span.underline
         {
