--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -147,11 +147,13 @@
         </div>
     </div>
 </div>
-<div class="row" *ngIf="showCheckboxes && batchOperationOptions != null">
+<div class="row" *ngIf="showCheckboxes == true && batchOperationOptions != null">
     <div class="l6 m4 col">
         <fo-select
                 label="with_selected"
                 [showActionButton]="true"
+                [actionButtonIcon]="play_arrow"
+                [disabled]="selectedRows == null || selectedRows.isEmpty"
                 [options]="batchOperationOptions"
                 (actionButtonTrigger)="onBatchOperationTrigger($event)">
         </fo-select>
