DataTableComponent: batchOperation fix #1

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -152,7 +152,7 @@
         <fo-select
                 label="with_selected"
                 [showActionButton]="true"
-                [actionButtonIcon]="play_arrow"
+                actionButtonIcon="play_arrow"
                 [disabled]="selectedRows == null || selectedRows.isEmpty"
                 [options]="batchOperationOptions"
                 (actionButtonTrigger)="onBatchOperationTrigger($event)">
