DataTableComponent: batchOperation fix #2 and SelectComponent::action button better size

--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -33,6 +33,7 @@
     </material-dropdown-select>
 
     <material-button
+            clear-size
             [disabled]="disabled || options == null || selectedModel == null"
             *ngIf="showActionButton && actionButtonText != null && actionButtonIcon == null"
             raised
