DataTableComponent: batchOperation fix #3

--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -43,6 +43,7 @@
 
     <!-- Icon has precedence over text -->
     <material-button
+            clear-size
             [disabled]="disabled || options == null || selectedModel == null"
             *ngIf="showActionButton && actionButtonIcon != null"
             raised
