DataTableComponent: batchOperation output

--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -155,7 +155,7 @@
                 actionButtonIcon="play_arrow"
                 [disabled]="selectedRows == null || selectedRows.isEmpty"
                 [options]="batchOperationOptions"
-                (actionButtonTrigger)="onBatchOperationTrigger($event)">
+                (actionButtonTrigger)="onBatchOperationTrigger($event.id)">
         </fo-select>
     </div>
 </div>
