FoSelect style fixes #2

--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -28,7 +28,7 @@
 
         material-button
         {
-            margin-left: 0.5rem;
+            margin-left: 0.5rem !important;
         }
     }
 }
