--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -26,9 +26,9 @@
             width: 100%;
         }
 
-        material-button
+        .button
         {
-            margin-left: 0.5rem !important;
+            margin-left: 0.5rem;
         }
     }
 }
