--- a/lib/src/components/fo_data_table_component/fo_data_table_component.html
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </caption>
-            <thead *ngIf="data.isNotEmpty">
+            <thead>
             <tr #headRow>
                 <td *ngIf="showCheckboxes">
                     <material-checkbox (checkedChange)="onAllCheckedChange($event)"></material-checkbox>
